--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>add heading</h1>
+  <h1>sandip pradnan</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, ullam? Odit dolor vero iusto expedita id exercitationem optio recusandae cum quia molestias, nisi tempora obcaecati. Earum similique repellat fugit itaque ab!</p>
 </body>
 </html>
